tests/errors/003-typechecking/002-undeclared-identifier/004-reference-to-function-scope-from-args.xxx
x := (y := a) => {
  a := "inner scope"
}
